--- a/app.json
+++ b/app.json
@@ -5,7 +5,15 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "6df0ec8a-b733-4c48-84a4-f6cb5068b659"
+      }
+    }
+  },
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-8647279125417942~3703264066"
   },
   "name": "seoulWardMap"
 }
